# C214Trabalho1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
lib/: CMakeLists.txt  lib.cpp
lib/include/: common.hpp  lib.hpp
tests/: CMakeLists.txt  testlib.cpp
